--- a/BGMI.html
+++ b/BGMI.html
@@ -3,5 +3,14 @@
 <h1> Battlegrounds Mobile India </h1>
 <a href="images.jpg"</a><img src="images.jpg"> 
 <img src="Pubg.jpg" height=100% width=100%><br></br>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ML0MXRGF5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-5ML0MXRGF5');
+</script>
 </body>
 </html>
