--- a/BGMI.html
+++ b/BGMI.html
@@ -1,6 +1,8 @@
 <html>
 <body>
+  <head>
 <h1> Battlegrounds Mobile India </h1>
+    </head>
 <a href="images.jpg"</a><img src="images.jpg"> 
 <img src="Pubg.jpg" height=100% width=100%><br></br>
   <!-- Global site tag (gtag.js) - Google Analytics -->
