--- a/BGMI.html
+++ b/BGMI.html
@@ -2,17 +2,18 @@
 <body>
   <head>
 <h1> Battlegrounds Mobile India </h1>
-    </head>
-<a href="images.jpg"</a><img src="images.jpg"> 
-<img src="Pubg.jpg" height=100% width=100%><br></br>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-5ML0MXRGF5"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3N77NBF6HJ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-5ML0MXRGF5');
+  gtag('config', 'G-3N77NBF6HJ');
 </script>
+    </head>
+<a href="images.jpg"</a><img src="images.jpg"> 
+<img src="Pubg.jpg" height=100% width=100%><br></br>
+ 
 </body>
 </html>
