--- a/BGMI.html
+++ b/BGMI.html
@@ -1,7 +1,7 @@
 <html>
 <body>
   <head>
-<h1> Battlegrounds Mobile India </h1>
+<h1> HELLO </h1>
     <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-3N77NBF6HJ"></script>
 <script>
@@ -12,8 +12,7 @@
   gtag('config', 'G-3N77NBF6HJ');
 </script>
     </head>
-<a href="images.jpg"</a><img src="images.jpg"> 
-<img src="Pubg.jpg" height=100% width=100%><br></br>
+
  
 </body>
 </html>
