--- a/BGMI.html
+++ b/BGMI.html
@@ -12,6 +12,8 @@
   gtag('config', 'G-3N77NBF6HJ');
 </script>
     </head>
+  <a href="images.jpg"</a><img src="images.jpg"> 
+<img src="Pubg.jpg" height=100% width=100%><br></br>
 
  
 </body>
